bug fixing and hive arc

--- a/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -30,7 +30,7 @@
  mod_job_pd_naval_admin_add: "$job_pd_naval_admin$ Job"
  mod_job_pd_naval_admin_per_pop:0 "§G+1§! $job_pd_naval_admin$ Job per $VALUE$ Pops"
  mod_job_pd_naval_admin_per_pop_short:0 "\n§G+1§! £mod_job_pd_naval_admin_add£ per $VALUE$ £pop£"
- job_pd_naval_admin_effect_desc: "£job_pd_naval_admin£ $job_pd_naval_admin_plural$ improve naval efficiency by turning £consumer_goods£ §Y$consumer_goods$§! into £society£ §YResearch Points§!, £unity£ §Y$UNITY$§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
+ job_pd_naval_admin_effect_desc: "£job_pd_naval_admin£ $job_pd_naval_admin_plural$ improve naval efficiency by turning £consumer_goods£ §Y$consumer_goods$§! into £society£ §YResearch Points§!, and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
  #Gestalt Logisitics
  job_pd_naval_admin_gestalt: "Logistics Drone"
  job_pd_naval_admin_gestalt_plural: "Logistics Drones"
@@ -38,7 +38,7 @@
  mod_job_pd_naval_admin_gestalt_add: "$job_pd_naval_admin_gestalt$ Job"
  mod_job_pd_naval_admin_gestalt_per_pop:0 "§G+1§! $job_pd_naval_admin_gestalt$ Job per $VALUE$ Pops"
  mod_job_pd_naval_admin_gestalt_per_pop_short:0 "\n§G+1§! £mod_job_pd_naval_admin_gestalt_add£ per $VALUE$ £pop£"
- job_pd_naval_admin_gestalt_effect_desc: "£job_pd_naval_admin_gestalt£ $job_pd_naval_admin_gestalt_plural$ improve naval efficiency by turning £minerals£ §Y$minerals$§! into £society£ §YResearch Points§!, £unity£ §Y$UNITY$§! and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
+ job_pd_naval_admin_gestalt_effect_desc: "£job_pd_naval_admin_gestalt£ $job_pd_naval_admin_gestalt_plural$ improve naval efficiency by turning £minerals£ §Y$minerals$§! into £society£ §YResearch Points§!, and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
  job_pd_capital_bio_politician:0 "Bio-Delegates"
  job_pd_capital_bio_politician_plural:0 "Bio-Delegate"
  job_pd_capital_bio_politician_desc:0 "Certain Bio-Trophies exhibit higher satisfaction when they perceive themselves as more important than others. This appearance of a dominant position positively influence their morale and happiness for all."
@@ -97,3 +97,39 @@
  mod_pc_pd_commerical_city_habitability: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference_desc: "Dummy-Class, do not use."
+
+###Hive Overmind Worlds
+ #Planet Classess
+ pc_pd_hive: "Hive Overmind World"
+ pc_pd_hive_desc: "This world is a colossal living organism intricately linked to the Hive Mind that created it. It has been sculpted as a bastion of advanced thought processes and is highly defended. Its terrain is poised to assail any unwelcome visitor."
+ pc_pd_hive_adj: "$pc_hive_adj$"
+ mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability"
+ trait_pc_pd_hive_preference: "$trait_pc_hive_preference$"
+ trait_pc_pd_hive_preference_desc: "$trait_pc_hive_preference_desc$"
+
+ #Districts
+ district_pd_hive: "$district_hive$"
+ district_pd_hive_plural: "$district_hive_plural$"
+ district_pd_hive_desc: "$district_hive_desc$"
+ district_pd_hive_industrial: "Industiral District"
+ district_pd_hive_industrial_plural: "Industiral Districts"
+ district_pd_hive_industrial_desc: "Smelting facilities and factories fill this district, creating advanced products out of raw materials"
+ district_pd_gestalt_naval: "Logisitcal District"
+ district_pd_gestalt_naval_plural: "Logisitcal Districts"
+ district_pd_gestalt_naval_desc: "The drones here optimize navy operations to maximum efficiency."
+ district_pd_gestalt_research: "Research District"
+ district_pd_gestalt_research_plural: "Research Districts"
+ district_pd_gestalt_research_desc: "Countless laboratories filled with focused research drones."
+ district_pd_gestalt_administrative: "Coordination District"
+ district_pd_gestalt_administrative_desc: "Coordination Districts"
+ district_pd_gestalt_administrative_plural: "A synaptic nexus that amplifies the hive's psionic connections, extending its will and guidance across the cosmos."
+
+ #Modifiers
+ pd_hive_military: "Overmind World"
+ pd_hive_military_desc: "This world is pivotal to the core functions of the Hive Mind and is fortified against external threats and influence. A formidable shield envelops the planet and warrior drones stand at the ready, ensuring its protection."
+
+ #Decisions
+ decision_pd_hive_overmind_project: "Hive Project - Overmind"
+ decision_pd_hive_overmind_project_desc: "This hive world will be reshaped into a bastion of advanced thought processes for the hive mind."
+ decision_pd_hive_overmind_project_effects: "Turns the planet into an §Y$pc_pd_hive$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
+ decision_pd_hive_overmind_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
