--- a/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -98,7 +98,7 @@
  trait_pc_pd_commerical_city_preference: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference_desc: "Dummy-Class, do not use."
 
-###Hive Overmind Worlds
+###Hive+Machine Overmind Worlds
  #Planet Classess
  pc_pd_hive: "Hive Overmind World"
  pc_pd_hive_desc: "This world is a colossal living organism intricately linked to the Hive Mind that created it. It has been sculpted as a bastion of advanced thought processes and is highly defended. Its terrain is poised to assail any unwelcome visitor."
@@ -106,6 +106,12 @@
  mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability"
  trait_pc_pd_hive_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_preference_desc: "$trait_pc_hive_preference_desc$"
+ pc_pd_machine: "Machine Nexus World"
+ pc_pd_machine_desc: "A rocky world that is covered with artificial structures set up to support the most advanced computing processes. The thin atmosphere consists primarily of industrial pollutants and cannot support biological life."
+ pc_pd_machine_adj: "$pc_machine_adj$"
+ mod_pc_pd_machine_habitability: "$mod_pc_machine_habitability$"
+ trait_pc_pd_machine_preference: "$trait_pc_machine_preference$"
+ trait_pc_pd_machine_preference_desc: "$trait_pc_machine_preference_desc$"
 
  #Districts
  district_pd_hive: "$district_hive$"
@@ -123,13 +129,24 @@
  district_pd_gestalt_administrative: "Coordination District"
  district_pd_gestalt_administrative_desc: "Coordination Districts"
  district_pd_gestalt_administrative_plural: "A synaptic nexus that amplifies the hive's psionic connections, extending its will and guidance across the cosmos."
+ district_pd_nexus: "$district_nexus$"
+ district_pd_nexus_desc: "$district_nexus_desc$"
+ district_pd_nexus_plural: "$district_nexus_plural"
 
  #Modifiers
  pd_hive_military: "Overmind World"
  pd_hive_military_desc: "This world is pivotal to the core functions of the Hive Mind and is fortified against external threats and influence. A formidable shield envelops the planet and warrior drones stand at the ready, ensuring its protection."
+ pd_machine_military: "Nexus World"
+ pd_machine_military_desc: "This planetary unit is integral to the operational matrix of this machine intelligence. It is shielded against external interference, encapsulated by an invulnerable defense mechanism. Combat units are in perpetual readiness, preserving unit integrity."
 
  #Decisions
  decision_pd_hive_overmind_project: "Hive Project - Overmind"
  decision_pd_hive_overmind_project_desc: "This hive world will be reshaped into a bastion of advanced thought processes for the hive mind."
  decision_pd_hive_overmind_project_effects: "Turns the planet into an §Y$pc_pd_hive$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
  decision_pd_hive_overmind_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
+
+ decision_pd_machine_nexus_project: "Machine Project - Nexus"
+ decision_pd_machine_nexus_project_desc: "This machine world will be augmented into a bastion of advanced subroutines."
+ decision_pd_machine_nexus_project_effects: "Turns the planet into an §Y$pc_pd_hive$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
+ decision_pd_machine_nexus_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
+
