--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -152,7 +152,7 @@
  pddomebases.100.factory: "Factory Moon Base"
  pddomebases.100.factory.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetArtisanIcon] [GetArtisanPlural] on connected colonies."
  pddomebases.100.foundry: "Foundry Moon Base"
- pddomebases.100.foundry.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [£job_foundry£ §Y[GetAlloyProducerPlural]§! on connected colonies."
+ pddomebases.100.foundry.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_foundry£ §Y[GetAlloyProducerPlural]§! on connected colonies."
  pddomebases.100.admin: "Administrative Moon Base"
  pddomebases.100.admin.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetAdministratorWithIcon] on connected colonies."
  pddomebases.100.priest: "Ecclesiastical Moon Base"
@@ -169,7 +169,7 @@
 
 #Concepts
  concept_pd_network_hub: "$d_pd_solar_system_network_hub$"
- concept_pd_network_hub_desc: "Grants numerous jobs based on capital level and constructed ['concept_pd_moonbases', Domed Bases] in the solar system.\n\n§L$d_pd_solar_system_network_hub_desc$§!"
+ concept_pd_network_hub_desc: "Grants numerous jobs based on capital level and constructed ['concept_pd_moonbase', Domed Bases] in the solar system.\n\n§L$d_pd_solar_system_network_hub_desc$§!"
  concept_pd_moonbase: "Domed Bases"
  concept_pd_moonbase_desc: "These bases connect to any §Y$d_pd_solar_system_network_hub$§! in the system, granting those planets extra jobs.\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
  concept_pd_domed_colony: "Domed Colonies"
