PD planets and azyern

--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -169,10 +169,12 @@
 
 #Concepts
  concept_pd_network_hub: "$d_pd_solar_system_network_hub$"
- concept_pd_network_hub_desc: "Grants numerous jobs based on capital level and constructed ['concept_pd_moonbase', Domed Bases] in the solar system.\n\n§L$d_pd_solar_system_network_hub_desc$§!"
- concept_pd_moonbase: "Domed Bases"
+ concept_pd_network_hub_desc: "Grants numerous jobs based on capital level and constructed ['concept_pd_moonbases', Domed Bases] in the solar system.\n\n§L$d_pd_solar_system_network_hub_desc$§!"
+ concept_pd_moonbase: "Domed Base"
  concept_pd_moonbase_desc: "These bases connect to any §Y$d_pd_solar_system_network_hub$§! in the system, granting those planets extra jobs.\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
- concept_pd_domed_colony: "Domed Colonies"
+ concept_pd_domed_colony: "Domed Colony"
  concept_pd_domed_colony_desc: "Built on planets with the §Y$terraforming_candidate$§! modifier which allow pre-terraforming colonization.\n\n§L$pd_domed_colony_0_MEGASTRUCTURE_DETAILS$§!"
  concept_tech_pd_domed_colonies: "$tech_pd_domed_colonies$"
  concept_tech_pd_domed_colonies_desc: "$allow_domed_colonies$\n\n§L$tech_pd_domed_colonies_desc$§!"
+ concept_pd_moonbases: "Domed Bases"
+ concept_pd_domed_colonies: "Domed Colonies"
