domed base origin balance pass

--- a/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity_rework/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -161,7 +161,7 @@
 #Origin
  origin_pd_interplanetary_settlers: "Interplanetary Settlers"
  origin_pd_interplanetary_settlers_desc: "Before the stars were reachable, this empire laid its foundations, erecting domed habitats across the moons and planets of their home system. Now, armed with FTL technology, they stand on the brink of a new era, ready to expand their reach into the uncharted realms of space."
- origin_tooltip_pd_interplanetary_settlers_start_effects: "- $INITIAL_POPS$ §G+6§!$NEW_LINE$- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_industrial_district', £district£ $district_industrial_plural$]: §G+1§!$TABBED_NEW_LINE$- ['concept_pd_network_hub', $d_pd_solar_system_network_hub$]$NEW_LINE$- Homeworld's Moon:$TABBED_NEW_LINE$- ['concept_pd_moonbase', $pd_domed_base_0$]$NEW_LINE$- Colony:$TABBED_NEW_LINE$- ['concept_pd_domed_colony', $pd_domed_colony_0$]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_tech_pd_domed_colonies', £engineering£ $tech_pd_domed_colonies$]"
+ origin_tooltip_pd_interplanetary_settlers_start_effects: "- $INITIAL_POPS$ §G+2§!$NEW_LINE$- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_pd_network_hub', $d_pd_solar_system_network_hub$]$NEW_LINE$- Homeworld's Moon:$TABBED_NEW_LINE$- ['concept_pd_moonbase', $pd_domed_base_0$]$NEW_LINE$- Colony:$TABBED_NEW_LINE$- ['concept_pd_domed_colony', $pd_domed_colony_0$]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_tech_pd_domed_colonies', £engineering£ $tech_pd_domed_colonies$]"
  pd_interplanetary_system_initializer_NAME:0 "Random Domed System"
  pd_interplanetary_system_initializer_DESC:0 "Random start system with one Domed Colony and one Domed Base."
  pd_interplanetary_sol_system_initializer_NAME:0 "Sol Domed System"
