big fixes and flora arc

--- a/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diveristy_arcologies_rework/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -119,7 +119,7 @@
  district_pd_hive_desc: "$district_hive_desc$"
  district_pd_hive_industrial: "Industiral District"
  district_pd_hive_industrial_plural: "Industiral Districts"
- district_pd_hive_industrial_desc: "Smelting facilities and factories fill this district, creating advanced products out of raw materials"
+ district_pd_hive_industrial_desc: "Smelting facilities and factories fill this district, creating advanced products out of raw materials."
  district_pd_gestalt_naval: "Logisitcal District"
  district_pd_gestalt_naval_plural: "Logisitcal Districts"
  district_pd_gestalt_naval_desc: "The drones here optimize navy operations to maximum efficiency."
