--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -78,3 +78,32 @@
 #Holdings
  holding_pd_aw_tree_of_life_sapling: "Megaflora Tree of Life Sprout"
  holding_pd_aw_tree_of_life_sapling_desc: "The Overlord has existed with their Megaflora Tree of Life for so long that they can no longer imagine life without it. Now, they want to share the same opportunity with their vassals."
+
+#Arcology - With Arc Sub Mod
+ district_pd_flora_hive: "$district_hive$"
+ district_pd_flora_hive_desc: "$district_hive_plural$"
+ district_pd_flora_hive_plural: "$district_hive_desc$"
+ district_pd_flora_hive_industrial: "Industiral District"
+ district_pd_flora_hive_industrial_desc: "Smelting facilities and factories fill this district, creating advanced products out of raw materials"
+ district_pd_flora_hive_industrial_plural: "Industiral Districts"
+ district_pd_flora_hive_naval: "Logisitcal District"
+ district_pd_flora_hive_naval_desc: "The drones here optismize navy operations to maximum efficiency."
+ district_pd_flora_hive_naval_plural: "Logisitcal Districts"
+ district_pd_flora_hive_research: "Research District"
+ district_pd_flora_hive_research_desc: "Countless laboratories filled with focused research drones"
+ district_pd_flora_hive_research_plural: "Research Districts"
+ district_pd_flora_hive_administrative: "Synpase District"
+ district_pd_flora_hive_administrative_desc: "A synaptic nexus that amplifies the hive's psionic connections, extending its will and guidance across the cosmos."
+ district_pd_flora_hive_administrative_plural: "Synpase Districts"
+ pc_pd_flora_hive: "Megaflora Crown World"
+ pc_pd_flora_hive_desc: "This Hive evolved in a symbiotic relationship with a vast megaflora tree whose roots have spread to every corner of the planet and changed the ecosystem to suit both it and the drones. TIt has been growns as a bastion of advanced thought processes and is highly defended by the hive that inhabits it."
+ pc_pd_flora_hive_adj: "forested"
+ mod_pc_pd_flora_hive_habitability: "Megaflora Crown Habitability"
+ trait_pc_pd_flora_hive_preference: "Megaflora Crown Preference"
+ trait_pc_pd_flora_hive_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pd_aw_flora_hive_military: "Megaflora Crown World"
+ pd_aw_flora_hive_military_desc: "This world is pivotal to the core functions of the Megaflora Hive Mind and is fortified against external threats and influence. A formidable shield envelops the planet and warrior drones stand at the ready, ensuring its protection."
+ decision_pd_flora_hive_crown_project: "Megaflora Hive Project - Crown"
+ decision_pd_flora_hive_crown_project_desc: "This hive world will be grown into a bastion of advanced thought processes for the hive mind."
+ decision_pd_flora_hive_crown_project_effects: "Turns the planet into an §Y$pc_pd_flora_hive$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
+ decision_pd_flora_hive_crown_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
