--- a/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_capital_l_english.yml
+++ b/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_capital_l_english.yml
@@ -20,3 +20,10 @@
  decision_pd_arcology_headquarters_effects:0 "Adds the §Y$d_pd_headquarters_building$§! to this capital, exhanging potential distrticts to enhance our corporation's administration capabilities."
  d_pd_headquarters_building: "Planetary Headquarters"
  d_pd_headquarters_building_desc: "A monumental symbol of dominanct, this headquarters towers over the planet. It serves as the nerve center for our operations, where the future of our megacorporation is crafted."
+
+#Hive Confluence Spire
+ decision_pd_hive_confluence_spire: "Build Confluence Spire"
+ decision_pd_hive_confluence_spire_desc: "To manifest the supremacy and reach of our collective, we shall grow a mighty confluence spire. This commanding structure will significantly amplify our operations across the stars."
+ decision_pd_hive_confluence_spire_effects:0 "Adds the §Y$d_pd_confluence_spire_building$§! to this capital hive world, exhanging potential distrticts to enhance our hive's administration capabilities."
+ d_pd_confluence_spire_building: "Confluence Spire"
+ d_pd_confluence_spire_building_desc: "This spire stands supreme across the planet's surface, a towering beacon of control. It is the hub of our collective will, where our path among the stars is intricately woven."
