fixes and flora hive capital

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -107,3 +107,8 @@
  decision_pd_flora_hive_crown_project_desc: "This hive world will be grown into a bastion of advanced thought processes for the hive mind."
  decision_pd_flora_hive_crown_project_effects: "Turns the planet into an §Y$pc_pd_flora_hive$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
  decision_pd_flora_hive_crown_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
+ decision_pd_megaflora_capital_building: "Build Grand Tree of Life"
+ decision_pd_megaflora_capital_building_desc: "To manifest the supremacy and reach of our collective, we shall grow a mighty Grand Tree of Life. This commanding tree will significantly amplify our operations across the stars."
+ decision_pd_megaflora_capital_building_effects:0 "Adds the §Y$d_pd_megaflora_capital_building$§! to this capital megaflora world, exhanging potential distrticts to enhance our hive's administration capabilities."
+ d_pd_megaflora_capital_building: "Grand Tree of Life"
+ d_pd_megaflora_capital_building_desc: "This tree stands supreme across the planet's surface, a towering beacon of control. It is the hub of our collective will, where our roots among the stars begin."
