--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_shroud_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_shroud_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-###Wasteland Planets
+###Shroud Planets
 #AP
  ap_pd_shroud_worlds:0 "Unregulated Industrialism"
  ap_pd_shroud_worlds_desc:0 "In pursuing unrestrained productivity, we must cast aside environmental constraints to unlock the planet's true industrial potential."
