fixed domed terraforming edge case

--- a/planetary_diversity/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -178,3 +178,6 @@
  concept_tech_pd_domed_colonies_desc: "$allow_domed_colonies$\n\n§L$tech_pd_domed_colonies_desc$§!"
  concept_pd_moonbases: "Domed Bases"
  concept_pd_domed_colonies: "Domed Colonies"
+
+#Warning
+ requires_no_terraforming:1 "$TRIGGER_FAIL$Cannot build on planets that have ongoing terraforming projects."
