Some bug fixing and necro worlds

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_flooded_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_flooded_l_english.yml
@@ -4,7 +4,7 @@
  decision_pd_aw_flood_planet: "Expand Planetary Sea"
  decision_pd_aw_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
  decision_pd_aw_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
- flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_MULT$: §G+20%§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
+ flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
  decision_pd_aw_unflood_planet: "Unflood Planet"
  decision_pd_aw_unflood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By lowering sea levels and moving cities to islands, we can ensure that life flourishes for those adapted to live above the waves."
  decision_pd_aw_flood_ringworld: "Flood Ringworld"
@@ -17,7 +17,7 @@
 
  flooded_habitat: "Flooded"
  flooded_habitat_desc: "Engulfed by water, this world faithfully mirrors the idyllic environment of aquatic denizens."
- pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_MULT$: §G+20%§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
+ pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
 
  pd_aw_flooded_planet: "Flooded World"
  pd_aw_flooded_planet_desc: "This oceanic planet is an ideal home for aquatic species. Life flourishes for those adapted to live beneath the waves."
