--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -37,7 +37,7 @@
  pd_algae: "Pink Algae World"
  pd_algae_desc: "This planet's rich shallow seas and lakes support brilliant pink algae blooms, creating a stunning visual spectacle that can be seen from space."
  pd_reef: "Reef World"
- pd_reef_desc: "Shallow oceans cover more than 9% of the surface and the under the surface significant reef systems can be seen from orbit. The only areas above water are where the reef system has grown high enough to create scattered island chains of coral."
+ pd_reef_desc: "Extensive reef systems visible from orbit form the planet's only landmasses, with scattered island chains created where coral has grown above the waterline."
  pd_archipelago: "Archipelago World"
  pd_archipelago_desc: "One planet-wide ocean with scattered island archipelagos covers the surface. The rich volcanic activity causes islands to appear and disappear at a comparatively high rate, creating an always changing landscape."
 
