bug fixes and machine capitals

--- a/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_capital_l_english.yml
+++ b/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_capital_l_english.yml
@@ -24,6 +24,13 @@
 #Hive Confluence Spire
  decision_pd_hive_confluence_spire: "Build Confluence Spire"
  decision_pd_hive_confluence_spire_desc: "To manifest the supremacy and reach of our collective, we shall grow a mighty confluence spire. This commanding structure will significantly amplify our operations across the stars."
- decision_pd_hive_confluence_spire_effects:0 "Adds the §Y$d_pd_confluence_spire_building$§! to this capital hive world, exhanging potential distrticts to enhance our hive's administration capabilities."
+ decision_pd_hive_confluence_spire_effects:0 "Adds the §Y$d_pd_confluence_spire_building$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
  d_pd_confluence_spire_building: "Confluence Spire"
  d_pd_confluence_spire_building_desc: "This spire stands supreme across the planet's surface, a towering beacon of control. It is the hub of our collective will, where our path among the stars is intricately woven."
+
+#Machine Centralized Processing
+ decision_pd_machine_centralized_processing: "Build Centralized Processing Unit"
+ decision_pd_machine_centralized_processing_desc: "To assert our superiority and extend operational capacity, we will construct a Centralized Processing Unit. This structure will significantly boost our galactic functions."
+ decision_pd_machine_centralized_processing_effects:0 "Adds the §Y$d_pd_machine_centralized_processing$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
+ d_pd_machine_centralized_processing: "Centralized Processing Unit"
+ d_pd_machine_centralized_processing_desc: "This processing unit dominates the planetary surface and is the central node for our collective directives, intricately orchestrating our drones."
