fixed all issues with compatability and sub mods

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -112,3 +112,12 @@
  decision_pd_megaflora_capital_building_effects:0 "Adds the §Y$d_pd_megaflora_capital_building$§! to this capital megaflora world, exhanging potential distrticts to enhance our hive's administration capabilities."
  d_pd_megaflora_capital_building: "Grand Tree of Life"
  d_pd_megaflora_capital_building_desc: "This tree stands supreme across the planet's surface, a towering beacon of control. It is the hub of our collective will, where our roots among the stars begin."
+
+#Jobs
+ job_pd_tol_naval_admin_gestalt: "Logistics Drone"
+ job_pd_tol_naval_admin_gestalt_plural: "Logistics Drones"
+ job_pd_tol_naval_admin_gestalt_desc: "Highly specialized in supply management, this drones ensure efficient naval operations by maintaining and tracking essential supply lines."
+ mod_job_pd_tol_naval_admin_gestalt_add: "$job_pd_tol_naval_admin_gestalt$ Job"
+ mod_job_pd_tol_naval_admin_gestalt_per_pop:0 "§G+1§! $job_pd_tol_naval_admin_gestalt$ Job per $VALUE$ Pops"
+ mod_job_pd_tol_naval_admin_gestalt_per_pop_short:0 "\n§G+1§! £mod_job_pd_tol_naval_admin_gestalt_add£ per $VALUE$ £pop£"
+ job_pd_tol_naval_admin_gestalt_effect_desc: "£job_pd_tol_naval_admin_gestalt£ $job_pd_tol_naval_admin_gestalt_plural$ improve naval efficiency by turning £minerals£ §Y$minerals$§! into £society£ §YResearch Points§!, and £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
