more ascension worlds locaizaiton framework

--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_l_korean.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_korean:
 
 #Terraforming Warning
  pd_planet_no_terraform: "$TRIGGER_FAIL$ This planet cannot be terraformed with standard procedures."
