--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_superprojects_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_superprojects_l_simp_chinese.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_simp_chinese:
 #Planetary Superprojects
  #Notification
  MESSAGE_PD_AW_SUPERPROJECT_DESC: "The superproject on $PLANET|Y$ is complete."
